force-app/main/default/objects/SeatbaseConfig__c/SeatbaseConfig__c.object-meta.xml
<CustomObject>
    <label>Seatbase Config</label>
    <nameField>
        <displayFormat>SB-{00000000}</displayFormat>
        <label>Seat Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Seatbase Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>