force-app/main/default/objects/SeatbaseConfig__c/fields/ConfigID__c.field-meta.xml
<CustomField>
    <fullName>ConfigID__c</fullName>
    <externalId>true</externalId>
    <label>Config ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>