force-app/main/default/objects/SeatbaseConfig__c/fields/Controller__c.field-meta.xml
<CustomField>
    <fullName>Controller__c</fullName>
    <label>Controller</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SeatbaseController</valueSetName>
    </valueSet>
</CustomField>