force-app/main/default/objects/SeatbaseConfig__c/fields/Converter__c.field-meta.xml
<CustomField>
    <fullName>Converter__c</fullName>
    <label>Converter</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SeatbaseConverter</valueSetName>
    </valueSet>
</CustomField>