force-app/main/default/objects/SeatbaseConfig__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <label>Position</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SeatbasePosition</valueSetName>
    </valueSet>
</CustomField>