force-app/main/default/objects/SeatbaseConfig__c/fields/RampConversion__c.field-meta.xml
<CustomField>
    <fullName>RampConversion__c</fullName>
    <label>Ramp Conversion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SeatbaseRampConversion</valueSetName>
    </valueSet>
</CustomField>