force-app/main/default/objects/SeatbaseConfig__c/fields/Seatbase__c.field-meta.xml
<CustomField>
    <fullName>Seatbase__c</fullName>
    <label>Seatbase</label>
    <length>255</length>
    <type>Text</type>
</CustomField>