force-app/main/default/objects/SeatbaseConfig__c/fields/SeatOption__c.field-meta.xml
<CustomField>
    <fullName>SeatOption__c</fullName>
    <label>Seat Option</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SeatbaseSeatOption</valueSetName>
    </valueSet>
</CustomField>