force-app/main/default/objects/SeatbaseConfig__c/fields/TransferHeight__c.field-meta.xml
<CustomField>
    <fullName>TransferHeight__c</fullName>
    <label>Transfer Height</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SeatbaseTransferHeight</valueSetName>
    </valueSet>
</CustomField>